--- a/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman_presentation/src/main/resources/Messages_de.properties
@@ -328,7 +328,7 @@ ViewItemFull_browse_to_item_not_in_range = Der eingegebene Wert existiert nicht
 
 ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nachricht:
 
-ViewItemFull_invalidID = Das Item mit dem Identifikator $1 konnte nicht gefunden werden.
+ViewItemFull_invalidID = Das Item mit dem angegebenen Identifikator konnte nicht gefunden werden.
 
 ViewItemFull_latestMessage = Letzte Nachricht:
 
