--- a/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman_presentation/src/main/resources/Messages_en.properties
@@ -150,8 +150,6 @@ ImportDatabaseError = Error getting imports from database
 
 ImportNameNotProvided = Please enter a name for the import
 
-IncorrectIdDoiFormat = Please enter the DOI without DOI resolver (https://doi.org/).
-
 IncorrectDDCClassification = The entered value is not conform to the DDC classification. 
 
 IncorrectISO6393Classification = The entered value is not conform to the given classification.
@@ -330,7 +328,7 @@ ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
-ViewItemFull_invalidID = The item with the identifier $1 could not be found.
+ViewItemFull_invalidID = The item with the requested identifier could not be found.
 
 ViewItemFull_latestMessage = Latest Message:
 
@@ -426,7 +424,27 @@ Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
 
 Yearbook_sendBackForReworkError = Error while trying to send back for rework
 
+basketAndBatch_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more.
+
+basketAndBatch_MaximumSizeReached = The limit of publications is exceeded.
+
+basket_MultipleAddedSuccessfully = $1 item(s) were added to the basket.
+
+basket_MultipleAlreadyInBasket = $1 of the selected items are already in the basket.
+
+basket_NoItems = The basket is empty.
+
+basket_NoItemsSelected = Please select the items you want to add to the basket.
+
+basket_SingleAddedSuccessfully = The item was added to the basket.
+
+basket_SingleAlreadyInBasket = The item is already in the basket.
+
+basket_SingleRemovedSuccessfully = The item was removed from the basket.
+
 batch_ErrorCount = $1 Errors occurred during the batch process.
+
+batch_ErrorMissingValues = Not all needed values were set.
 
 batch_MultipleAddedSuccessfully = $1 item(s) were added to the batch processing.
 
@@ -434,17 +452,15 @@ batch_MultipleAlreadyInBasket = $1 of the selected items are already in the batc
 
 batch_NoItems = The batch processing is empty.
 
-batch_NoItemsSelected = Please select the items you want to add to the batch processing.
-
 batch_NoItemsAvailable = No Items were added to the batch processing.
+
+batch_NoItemsSelected = Please select the items you want to add to the batch processing.
 
 batch_ProcessLog_AuthenticationError = You need to be logged in, to change the publication.
 
-lblBatchProceesLog_AuthorizationError = You do not have the privileges to change the publication.
-
 batch_ProcessLog_FileMetadataNotChanged = The metadata of the file did not change.
 
-batch_ProcessLog_FileMetadataOldValueNotEqual =  The given initial value does not match the value in the file metadata.
+batch_ProcessLog_FileMetadataOldValueNotEqual = The given initial value does not match the value in the file metadata.
 
 batch_ProcessLog_InternalError = An internal error occurred during the batch processing.
 
@@ -481,26 +497,6 @@ batch_SingleRemovedSuccessfully = The item was removed from the batch processing
 batch_SuccesCount = $1 publications were changed successfully.
 
 batch_WarningCount = $1 publications should be checked because warnings occurred.
-
-batch_ErrorMissingValues = Not all needed values were set.
-
-basketAndBatch_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more.
-
-basketAndBatch_MaximumSizeReached = The limit of publications is exceeded.
-
-basket_MultipleAddedSuccessfully = $1 item(s) were added to the basket.
-
-basket_MultipleAlreadyInBasket = $1 of the selected items are already in the basket.
-
-basket_NoItems = The basket is empty.
-
-basket_NoItemsSelected = Please select the items you want to add to the basket.
-
-basket_SingleAddedSuccessfully = The item was added to the basket.
-
-basket_SingleAlreadyInBasket = The item is already in the basket.
-
-basket_SingleRemovedSuccessfully = The item was removed from the basket.
 
 chooseWorkspace = Please choose a workspace to edit the items.
 
@@ -808,6 +804,8 @@ javax.faces.component.UISelectMany.INVALID        = Validation error
 javax.faces.component.UISelectMany.INVALID_detail = Input not valid
 javax.faces.component.UISelectOne.INVALID         = Validation error
 javax.faces.component.UISelectOne.INVALID_detail  = Input not valid
+
+lblBatchProceesLog_AuthorizationError = You do not have the privileges to change the publication.
 
 listError_goTo = The given page number is not valid 
 
