--- a/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -146,8 +146,6 @@ ImportDatabaseError = Error getting imports from database
 
 ImportNameNotProvided = \u4E00\u62EC\u767B\u9332\u7528\u306E\u540D\u79F0\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-IncorrectIdDoiFormat = Please enter the DOI without DOI resolver (https://doi.org/).
-
 IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
 IncorrectISO6393Classification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B\u5165\u529B\u3055\u308C\u305F\u30AD\u30FC\u30EF\u30FC\u30C9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
@@ -326,7 +324,7 @@ ViewItemFull_browse_to_item_not_in_range = \u5165\u529B\u3057\u305F\u5024\u306F\
 
 ViewItemFull_inRevision = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u6539\u8A02\u4E2D\u3067\u3059! \u6700\u65B0\u306E\u30E1\u30C3\u30BB\u30FC\u30B8:
 
-ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+ViewItemFull_invalidID = \u8B58\u5225\u5B50\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 
 ViewItemFull_latestMessage = \u6700\u65B0\u306E\u30E1\u30C3\u30BB\u30FC\u30B8:
 
@@ -422,7 +420,27 @@ Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
 
 Yearbook_sendBackForReworkError = Error while trying to send back for rework
 
+basketAndBatch_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more.
+
+basketAndBatch_MaximumSizeReached = \u4E00\u6642\u4FDD\u5B58\u4EF6\u6570\u306E\u4E0A\u9650\u3092\u8D85\u3048\u307E\u3057\u305F\u3002
+
+basket_MultipleAddedSuccessfully = $1\u4EF6\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
+
+basket_MultipleAlreadyInBasket = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0\u306E\u3046\u3061$1\u4EF6\u306F\u767B\u9332\u6E08\u307F\u3067\u3057\u305F\u3002
+
+basket_NoItems = \u4E00\u6642\u4FDD\u5B58\u306F\u7A7A\u3067\u3059\u3002
+
+basket_NoItemsSelected = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u305F\u3044\u30A2\u30A4\u30C6\u30E0\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+
+basket_SingleAddedSuccessfully = \u4E00\u6642\u4FDD\u5B58\u306B\u30A2\u30A4\u30C6\u30E0\u3092\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
+
+basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\u3067\u306B\u4E00\u6642\u4FDD\u5B58\u306B\u767B\u9332\u6E08\u307F\u3067\u3059\u3002
+
+basket_SingleRemovedSuccessfully = \u30A2\u30A4\u30C6\u30E0\u306F\u4E00\u6642\u4FDD\u5B58\u304B\u3089\u524A\u9664\u3055\u308C\u307E\u3057\u305F\u3002
+
 batch_ErrorCount = $1 Errors occurred during the batch process.
+
+batch_ErrorMissingValues = Not all needed values were set.
 
 batch_MultipleAddedSuccessfully = $1\u4EF6\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
 
@@ -430,13 +448,11 @@ batch_MultipleAlreadyInBasket = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0
 
 batch_NoItems = \u4E00\u6642\u4FDD\u5B58\u306F\u7A7A\u3067\u3059\u3002
 
-batch_NoItemsSelected = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u305F\u3044\u30A2\u30A4\u30C6\u30E0\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-
 batch_NoItemsAvailable = No Items were added to the batch process.
 
-batch_ProcessLog_AuthenticationError = You need to be logged in, to change the publication.
+batch_NoItemsSelected = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u305F\u3044\u30A2\u30A4\u30C6\u30E0\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-lblBatchProceesLog_AuthorizationError = You do not have the privileges to change the publication.
+batch_ProcessLog_AuthenticationError = You need to be logged in, to change the publication.
 
 batch_ProcessLog_FileMetadataNotChanged = The metadata of the file did not change.
 
@@ -450,8 +466,6 @@ batch_ProcessLog_MetadataChangeValueNotAllowed = Unable to set new value. Possib
 
 batch_ProcessLog_MetadataChangeValueNotEqual = The given initial value does not match the value in the publication metadata.
 
-batch_ProcessLog_MetadataNotAllowed = Unable to set new vaulue. Possible reasons are restrictions to the context or the publication.
-
 batch_ProcessLog_MetadataLost = While batch updating the publication, metadata was lost.
 
 batch_ProcessLog_MetadataNoChangeValue = No initial value was set. For a replacing function the values must differ.
@@ -459,6 +473,8 @@ batch_ProcessLog_MetadataNoChangeValue = No initial value was set. For a replaci
 batch_ProcessLog_MetadataNoNewValueSet = No value set.
 
 batch_ProcessLog_MetadataNoSourceFound = No fitting source found.
+
+batch_ProcessLog_MetadataNotAllowed = Unable to set new vaulue. Possible reasons are restrictions to the context or the publication.
 
 batch_ProcessLog_MetadataNotChanged = Metadata did not change.
 
@@ -479,26 +495,6 @@ batch_SingleRemovedSuccessfully = \u30A2\u30A4\u30C6\u30E0\u306F\u4E00\u6642\u4F
 batch_SuccesCount = $1 publications were changed successfully.
 
 batch_WarningCount = $1 publications should be checked because warnings occurred.
-
-batch_ErrorMissingValues = Not all needed values were set.
-
-basketAndBatch_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more.
-
-basketAndBatch_MaximumSizeReached = \u4E00\u6642\u4FDD\u5B58\u4EF6\u6570\u306E\u4E0A\u9650\u3092\u8D85\u3048\u307E\u3057\u305F\u3002
-
-basket_MultipleAddedSuccessfully = $1\u4EF6\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
-
-basket_MultipleAlreadyInBasket = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0\u306E\u3046\u3061$1\u4EF6\u306F\u767B\u9332\u6E08\u307F\u3067\u3057\u305F\u3002
-
-basket_NoItems = \u4E00\u6642\u4FDD\u5B58\u306F\u7A7A\u3067\u3059\u3002
-
-basket_NoItemsSelected = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3057\u305F\u3044\u30A2\u30A4\u30C6\u30E0\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-
-basket_SingleAddedSuccessfully = \u4E00\u6642\u4FDD\u5B58\u306B\u30A2\u30A4\u30C6\u30E0\u3092\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
-
-basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\u3067\u306B\u4E00\u6642\u4FDD\u5B58\u306B\u767B\u9332\u6E08\u307F\u3067\u3059\u3002
-
-basket_SingleRemovedSuccessfully = \u30A2\u30A4\u30C6\u30E0\u306F\u4E00\u6642\u4FDD\u5B58\u304B\u3089\u524A\u9664\u3055\u308C\u307E\u3057\u305F\u3002
 
 chooseWorkspace = \u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
@@ -806,6 +802,8 @@ javax.faces.component.UISelectMany.INVALID        = \u691C\u8A3C\u30A8\u30E9\u30
 javax.faces.component.UISelectMany.INVALID_detail = \u6B63\u3057\u3044\u5165\u529B\u3067\u306F\u3042\u308A\u307E\u305B\u3093
 javax.faces.component.UISelectOne.INVALID         = \u691C\u8A3C\u30A8\u30E9\u30FC
 javax.faces.component.UISelectOne.INVALID_detail  = \u6B63\u3057\u3044\u5165\u529B\u3067\u306F\u3042\u308A\u307E\u305B\u3093
+
+lblBatchProceesLog_AuthorizationError = You do not have the privileges to change the publication.
 
 listError_goTo = \u6307\u5B9A\u3055\u308C\u305F\u30DA\u30FC\u30B8\u756A\u53F7\u306F\u8A8D\u8B58\u3067\u304D\u307E\u305B\u3093\u3002
 
